# git-sms

./: pyproject.toml  requirements_dev.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml  test.yml
src/: commands.py  connections.py  main.py  natural_language_router.py  summarizers.py
tests/: test_commands.py  test_summarizers.py
