[project]
name = "git-sms"
version = "0.1.0"
description = "Git SMS - FastAPI app for GitHub SMS interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference",
    "fastapi",
    "openai",
    "python-dotenv",
    "python-multipart",
    "httpx",
    "tiktoken>=0.5.1",
    "uvicorn",
    "langchain>=1.0.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a25",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=git_sms --cov-report=term-missing"

[tool.ruff]
preview = true
line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]
target-version = "py312"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE",
    "COM812",
    "CPY",
    "D202",
    "D203",
    "D212",
    "D213",
    "D413",
    "INP001",
    "PLR2004",
    "T201",
    "TRY",
    "ANN401",
    "ERA001",
]

per-file-ignores = { "tests/*" = ["S101", "ANN"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
